# loagma_vechile_Automation

./: .env.example  .gitignore  ALLOCATION_IMPLEMENTATION.md  BACKEND_STRUCTURE.md  MAP_VISUALIZATION_GUIDE.md  Makefile  README.md  REAL_DATA_TESTING_GUIDE.md  SEEDING_GUIDE.md  check_db_config.py  create_tables_simple.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  run_allocation_tests.py  seed_dummy_data.py  seed_via_mysql.bat  seed_with_pymysql.py  setup_database.py  test_db_connection.py  test_real_data.py  test_with_real_orders.py
alembic/: env.py
alembic/versions/: 001_phase1_vehicle_allocation.py
algo_generated_trips/: IMPLEMENTATION_SUMMARY.md  __init__.py  generate_fresh_trips_optimized.py  generate_trips.py
algo_generated_trips/api/: __init__.py
algo_generated_trips/core/: allocation_engine.py  config.py  order_fetcher.py  trip_generator.py  vehicle_manager.py  zone_vehicle_manager.py
algo_generated_trips/docs/: API_DOCUMENTATION.md  IMPLEMENTATION_COMPLETE.md
algo_generated_trips/outputs/: .gitignore
algo_generated_trips/scripts/: analyze_conflicts.py  build_pincode_mapping.py  (+4 more)
app/: __init__.py  main.py
examples/: allocation_example.py
human_made_trips_visualization/: README.md  day_26_orders.py  day_30_orders.py  vy37r1dlj4_UserSheet.txt  yocm27jhm8_UserSheet.txt
migrations/: phase1_vehicle_allocation.sql  seed_dummy_data.sql
pincode_management/: README.md  batch_update_pincodes.py  extract_pincodes.py  fill_missing_with_geocoding.py  find_missing_pincodes.py  order_pin.txt
tests/: conftest.py
(+36 files in other folders)
